1/27/22: Created Git Repository, separate branch for first assignment, Makefile, CHANGELOG, README. Developed the map struct, started initializing map grid, and finished method to print map. Started development on seeding and growing different regions of the map.