@@ -1,1 +1,1 @@
-Create a map for the Pokemon game. The map size is 80 wide and 21 tall. There are exits on each cardinal direction edge (N, S, E, W). The map is randomized to consists of different regions, clearings and tall grass. The border edges are immovable boulders. The different characters are represent as follows, % is a boulder, , is tall grass, . is a clearing, and # is a path.
+Create a map for the Pokemon game. The map size is 80 wide and 21 tall. There are exits on each cardinal direction edge (N, S, E, W). The map is randomized to consists of different regions, clearings and tall grass. The border edges are immovable boulders. The different characters are represent as follows, '%' is a boulder, ',' is tall grass, '.' is a clearing, '*' is desert, '#' is a path, '^' is tree and '-' is a rock. There are 5 style of regions clearings, tall grass, a mixture of the two, and desert. There are four different combinations of maps that can be generated which are: 2 clearings, 2 tall grass, 0 desert, and 1 mixed, 2 clearings, 2 tall grass, 0 desert, and 2 mixed, 2 clearings, 2 tall grass, 1 desert, and 1 mixed, and 2 clearings, 2 tall grass, 1 desert, and 2 mixed. This creates up to 7 different possible regions to spawn in a given map.
